# yocto-canvas

./: .env  .gitignore  Cargo.toml  Justfile  README.md  build.rs  render-text.rs
shaders/: shader.frag.glsl  shader.vert.glsl
src/: camera.rs  composite.rs  image.rs  main.rs  model.rs  texture.rs
src/backend_wgpu/: canvas.rs  mod.rs
src/composite/: mod.rs  nodes.rs
