[package]
name = 'yocto-canvas'
version = '0.1.0'
authors = ['Zack <zphixon@gmail.com>']
edition = '2018'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = '0.24.0'
env_logger = '0.8.3'
log = '0.4.14'
cgmath = '0.18.0'
futures = '0.3.13'
image = '0.23.14'

[dependencies.wgpu]
version = '0.7.1'
features = ['vulkan-portability']

[dependencies.bytemuck]
version = '1.5.1'
features = ['derive']

